--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
   <div data-animation="default" data-collapse="small" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
     <div class="container w-container">
       <div class="container-inner">
-        <a href="index" id="w-node-_649394a2-8411-ead7-0575-63509ac15fb8-9ac15fb5" aria-current="page" class="brand w-nav-brand w--current"><img src="images/minugahana-logo.png" loading="lazy" alt="" class="image-logo"></a>
+        <a href="./" id="w-node-_649394a2-8411-ead7-0575-63509ac15fb8-9ac15fb5" aria-current="page" class="brand w-nav-brand w--current"><img src="images/minugahana-logo.png" loading="lazy" alt="" class="image-logo"></a>
         <nav role="navigation" id="w-node-_649394a2-8411-ead7-0575-63509ac15fba-9ac15fb5" class="nav-menu w-nav-menu">
-          <a href="about" class="nav-link w-nav-link">About</a>
-          <a href="coming-soon" class="nav-link w-nav-link">Shop</a>
-          <a href="production" class="nav-link w-nav-link">Production</a>
+          <a href="./about" class="nav-link w-nav-link">About</a>
+          <a href="./coming-soon" class="nav-link w-nav-link">Shop</a>
+          <a href="./production" class="nav-link w-nav-link">Production</a>
         </nav>
         <div id="w-node-_649394a2-8411-ead7-0575-63509ac15fc1-9ac15fb5" class="menu-button w-nav-button">
           <div class="w-icon-nav-menu"></div>
@@ -63,10 +63,10 @@
   <div class="section-footer wf-section">
     <div class="container w-container">
       <div class="footer-wrap">
-        <a href="shipping-and-returns.html" class="footer-link">Shipping &amp; Returns</a>
-        <a href="contact.html" class="footer-link">Contact</a>
-        <a href="size-guide.html" class="footer-link">Size guide</a>
-        <a href="care.html" class="footer-link">Care</a>
+        <a href="./shipping-and-returns" class="footer-link">Shipping &amp; Returns</a>
+        <a href="./contact" class="footer-link">Contact</a>
+        <a href="./size-guide" class="footer-link">Size guide</a>
+        <a href="./care" class="footer-link">Care</a>
         <a href="https://www.instagram.com/minugahan_a/" class="footer-link-icon w-inline-block"><img src="images/minu-instagram.png" loading="lazy" alt="" class="footer-icon"></a>
       </div>
     </div>
