--- a/size-guide.html
+++ b/size-guide.html
@@ -22,11 +22,11 @@
   <div data-animation="default" data-collapse="small" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
     <div class="container w-container">
       <div class="container-inner">
-        <a href="index.html" id="w-node-_649394a2-8411-ead7-0575-63509ac15fb8-9ac15fb5" class="brand w-nav-brand"><img src="images/minugahana-logo.png" loading="lazy" alt="" class="image-logo"></a>
+        <a href="./" id="w-node-_649394a2-8411-ead7-0575-63509ac15fb8-9ac15fb5" class="brand w-nav-brand"><img src="images/minugahana-logo.png" loading="lazy" alt="" class="image-logo"></a>
         <nav role="navigation" id="w-node-_649394a2-8411-ead7-0575-63509ac15fba-9ac15fb5" class="nav-menu w-nav-menu">
-          <a href="about.html" class="nav-link w-nav-link">About</a>
-          <a href="coming-soon.html" class="nav-link w-nav-link">Shop</a>
-          <a href="production.html" class="nav-link w-nav-link">Production</a>
+          <a href="./about" class="nav-link w-nav-link">About</a>
+          <a href="./coming-soon" class="nav-link w-nav-link">Shop</a>
+          <a href="./production" class="nav-link w-nav-link">Production</a>
         </nav>
         <div id="w-node-_649394a2-8411-ead7-0575-63509ac15fc1-9ac15fb5" class="menu-button w-nav-button">
           <div class="w-icon-nav-menu"></div>
