--- a/shipping-and-returns.html
+++ b/shipping-and-returns.html
@@ -44,7 +44,7 @@
       <div class="paragraph-wrap-left">
         <div class="production_rich-text w-richtext">
           <h2>Shipping</h2>
-          <p>We ship all orders directly from Sabah, Malaysia via J&amp;T express (domestic)  and  DHL express (international). You will be able to choose which carrier to use at check out.</p>
+          <p>We ship all orders directly from Sabah, Malaysia via J&amp;T express (domestic)  and FEDEX (international). You will be able to choose which carrier to use at check out.</p>
           <h2>Shipping Rates</h2>
           <p><strong>Domestic</strong>:<br>WM - RM11<br>EM - RM8<br><strong>International:</strong><br>Please take into account that products shipped outside of Malaysia could be subject to custom fees and import duties depending on the custom regulations of the destination&#x27;s country. These fees will be fully charged to the customer. Shipping costs are vary depending on your location. If you have any trouble with the shipping, feel free to contact us.</p>
           <p>Once your order is confirmed, a summary of all the items you order and shipping address will be sent to your personal email. We will then process your delivery of goods purchase after full payment of the transaction is received.</p>
