left iocns update

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         </div>
         <div id="w-node-_649394a2-8411-ead7-0575-63509ac15fc3-9ac15fb5" class="link-wrap-right">
           <a href="#" class="w-inline-block"><img src="images/search.png" loading="lazy" alt="" class="nav-icon"></a>
-          <a href="#" class="w-inline-block"><img src="images/account.png" loading="lazy" alt="" class="nav-icon"></a>
-          <a href="#" class="w-inline-block"><img src="images/shop.png" loading="lazy" alt="" class="nav-icon"></a>
+          <a href="./shop#!/~/account/returnUrl=/account" class="w-inline-block"><img src="images/account.png" loading="lazy" alt="" class="nav-icon"></a>
+          <a href="./shop#!/~/cart" class="w-inline-block"><img src="images/shop.png" loading="lazy" alt="" class="nav-icon"></a>
         </div>
       </div>
     </div>
