--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
           <div class="w-icon-nav-menu"></div>
         </div>
         <div id="w-node-_649394a2-8411-ead7-0575-63509ac15fc3-9ac15fb5" class="link-wrap-right">
-          <a href="#" class="w-inline-block"><img src="images/search.png" loading="lazy" alt="" class="nav-icon"></a>
-          <a href="./shop#!/~/account/returnUrl=/account" class="w-inline-block"><img src="images/account.png" loading="lazy" alt="" class="nav-icon"></a>
-          <a href="./shop#!/~/cart" class="w-inline-block"><img src="images/shop.png" loading="lazy" alt="" class="nav-icon"></a>
+          <a href="/shop#!/~/search" class="w-inline-block"><img src="images/search.svg" loading="lazy" alt="" class="nav-icon"></a>
+          <a href="./shop#!/~/account/returnUrl=/account" class="w-inline-block"><img src="images/account.svg" loading="lazy" alt="" class="nav-icon"></a>
+          <a href="./shop#!/~/cart" class="w-inline-block"><img src="images/cart.svg" loading="lazy" alt="" class="nav-icon"></a>
         </div>
       </div>
     </div>
@@ -67,7 +67,7 @@
         <a href="./contact" class="footer-link">Contact</a>
         <a href="./size-guide" class="footer-link">Size guide</a>
         <a href="./care" class="footer-link">Care</a>
-        <a href="https://www.instagram.com/minugahan_a/" class="footer-link-icon w-inline-block"><img src="images/minu-instagram.png" loading="lazy" alt="" class="footer-icon"></a>
+        <a href="https://www.instagram.com/minugahan_a/" class="footer-link-icon w-inline-block"><img src="images/minu-instagram-minu.svg" loading="lazy" alt="" class="footer-icon"></a>
       </div>
     </div>
   </div>
