--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <a href="./contact" class="footer-link">Contact</a>
         <a href="./size-guide" class="footer-link">Size guide</a>
         <a href="./care" class="footer-link">Care</a>
-        <a href="https://www.instagram.com/minugahan_a/" class="footer-link-icon w-inline-block"><img src="images/minu-instagram-minu.svg" loading="lazy" alt="" class="footer-icon"></a>
+        <a href="https://www.instagram.com/minugahan_a/" class="footer-link-icon w-inline-block"><img src="images/instagram-minu.svg" loading="lazy" alt="" class="footer-icon"></a>
       </div>
     </div>
   </div>
