--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="./" id="w-node-_649394a2-8411-ead7-0575-63509ac15fb8-9ac15fb5" aria-current="page" class="brand w-nav-brand w--current"><img src="images/minugahana-logo.png" loading="lazy" alt="" class="image-logo"></a>
         <nav role="navigation" id="w-node-_649394a2-8411-ead7-0575-63509ac15fba-9ac15fb5" class="nav-menu w-nav-menu">
           <a href="./about" class="nav-link w-nav-link">About</a>
-          <a href="./coming-soon" class="nav-link w-nav-link">Shop</a>
+          <a href="./shop" class="nav-link w-nav-link">Shop</a>
           <a href="./production" class="nav-link w-nav-link">Production</a>
         </nav>
         <div id="w-node-_649394a2-8411-ead7-0575-63509ac15fc1-9ac15fb5" class="menu-button w-nav-button">
