--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Thu Nov 10 2022 06:22:51 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Nov 13 2022 05:56:39 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="636b43f2e501505edc922501" data-wf-site="6369af2b715eea54d5417e1f">
 <head>
   <meta charset="utf-8">
@@ -15,26 +15,34 @@
   <script type="text/javascript">WebFont.load({  google: {    families: ["Chivo:300,regular,700,900"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/minu-favicon.svg" rel="shortcut icon" type="image/x-icon">
-  <link href="images/minu-webclip.svg" rel="apple-touch-icon">
+  <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body>
   <div data-animation="default" data-collapse="small" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
     <div class="container w-container">
       <div class="container-inner">
-        <a href="./" id="w-node-_649394a2-8411-ead7-0575-63509ac15fb8-9ac15fb5" class="brand w-nav-brand"><img src="images/minugahana-logo.png" loading="lazy" alt="" class="image-logo"></a>
+        <a href="index.html" id="w-node-_649394a2-8411-ead7-0575-63509ac15fb8-9ac15fb5" class="brand w-nav-brand"><img src="images/minugahana-logo.png" loading="lazy" alt="" class="image-logo"></a>
         <nav role="navigation" id="w-node-_649394a2-8411-ead7-0575-63509ac15fba-9ac15fb5" class="nav-menu w-nav-menu">
-          <a href="./about" aria-current="page" class="nav-link w-nav-link w--current">About</a>
-          <a href="./coming-soon" class="nav-link w-nav-link">Shop</a>
-          <a href="./production" class="nav-link w-nav-link">Production</a>
+          <a href="about.html" aria-current="page" class="nav-link w-nav-link w--current">About</a>
+          <a href="shop.html" class="nav-link w-nav-link">Shop</a>
+          <a href="production.html" class="nav-link w-nav-link">Production</a>
         </nav>
         <div id="w-node-_649394a2-8411-ead7-0575-63509ac15fc1-9ac15fb5" class="menu-button w-nav-button">
           <div class="w-icon-nav-menu"></div>
         </div>
         <div id="w-node-_649394a2-8411-ead7-0575-63509ac15fc3-9ac15fb5" class="link-wrap-right">
-          <a href="#" class="w-inline-block"><img src="images/search.png" loading="lazy" alt="" class="nav-icon"></a>
-          <a href="#" class="w-inline-block"><img src="images/account.png" loading="lazy" alt="" class="nav-icon"></a>
-          <a href="#" class="w-inline-block"><img src="images/shop.png" loading="lazy" alt="" class="nav-icon"></a>
+          <a href="/shop#!/~/search" class="w-inline-block"><img src="images/search.svg" loading="lazy" alt="" class="nav-icon"></a>
+          <a href="/shop#!/~/account/returnUrl=/account" class="w-inline-block"><img src="images/account.svg" loading="lazy" alt="" class="nav-icon"></a>
+          <a href="#" class="nav-link-cart w-inline-block"><img src="images/cart.svg" loading="lazy" alt="" class="nav-icon">
+            <div class="embed-cart w-embed w-script">
+              <div class="ec-cart-widget"></div>
+              <div>
+                <script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?80605001&data_platform=code&data_date=2022-11-13" charset="utf-8"></script>
+                <script type="text/javascript">Ecwid.init();</script>
+              </div>
+            </div>
+          </a>
         </div>
       </div>
     </div>
@@ -97,16 +105,63 @@
   <div class="section-footer wf-section">
     <div class="container w-container">
       <div class="footer-wrap">
-        <a href="./shipping-and-returns" class="footer-link">Shipping &amp; Returns</a>
-        <a href="./contact" class="footer-link">Contact</a>
-        <a href="./size-guide" class="footer-link">Size guide</a>
-        <a href="./care" class="footer-link">Care</a>
-        <a href="https://www.instagram.com/minugahan_a/" class="footer-link-icon w-inline-block"><img src="images/minu-instagram.png" loading="lazy" alt="" class="footer-icon"></a>
+        <a href="shipping-and-returns.html" class="footer-link">Shipping &amp; Returns</a>
+        <a href="contact.html" class="footer-link">Contact</a>
+        <a href="size-guide.html" class="footer-link">Size guide</a>
+        <a href="care.html" class="footer-link">Care</a>
+        <a href="https://www.instagram.com/minugahan_a/" class="footer-link-icon w-inline-block"><img src="images/instagram-minu.svg" loading="lazy" alt="" class="footer-icon"></a>
       </div>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6369af2b715eea54d5417e1f" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
+  <script>
+  Ecwid.OnPageLoaded.add(function(page){
+    console.log(page);
+    if(Ecwid.getVisitorLocation().countryCode === 'MY' && page.type === 'PRODUCT'){
+      console.log('Malaysian',$('input[name="Country"]').length)
+      var checkExist = setInterval(function() {
+        console.log("loading completed!");
+        clearInterval(checkExist);
+        $('input[name="Country"]').click()	
+      }, 100);
+    }
+  });
+  /*
+  Ecwid.OnPageLoaded.add(function(page){
+    console.log(page);
+    if(Ecwid.getVisitorLocation().countryCode === 'MY' && page.type === 'PRODUCT'){
+      console.log('Malaysian',$('input[name="Country"]').length)
+      var checkExist = setInterval(function() {
+        if ($('#loadingDiv').is(':hidden')) {
+          console.log("loading completed!");
+          clearInterval(checkExist);
+          $('input[name="Country"]').click()	
+        }
+      }, 100);
+    }
+  });
+*/
+  Ecwid.OnProductOptionsChanged.add(function() {
+    beforeDiscount = parseFloat($($('.details-product-price__value')[0]).text().replace('RM', ''))	
+    discount = parseFloat($('.option-surcharge__value').text().replace('-RM', ''))
+    /*
+    if(Ecwid.getVisitorLocation().countryCode === 'MY'){
+      $('.product-details__product-price').append(`<div class="product-details__product-price ec-price-item" style="margin-bottom:0px"><s class="ec-price-item" style="font-size: 15px;">AU$${beforeDiscount.toFixed(2)}</s><span> (Malaysian Price)</span></div>`)    
+    }
+    */
+  });
+  Ecwid.OnPageLoaded.add(function(page){
+    console.log(page);
+    if(page.type === 'SEARCH' || page.type === 'ACCOUNT_ROOT' || page.type === 'CART') {
+      console.log('yes');
+      $('.tabs-menu').addClass('hide');
+    } else {
+      console.log('no')
+      $('.tabs-menu').removeClass('hide');
+    }
+  });
+</script>
 </body>
 </html>
