--- a/coming-soon.html
+++ b/coming-soon.html
@@ -25,16 +25,24 @@
         <a href="./" id="w-node-_649394a2-8411-ead7-0575-63509ac15fb8-9ac15fb5" class="brand w-nav-brand"><img src="images/minugahana-logo.png" loading="lazy" alt="" class="image-logo"></a>
         <nav role="navigation" id="w-node-_649394a2-8411-ead7-0575-63509ac15fba-9ac15fb5" class="nav-menu w-nav-menu">
           <a href="./about" class="nav-link w-nav-link">About</a>
-          <a href="./coming-soon" aria-current="page" class="nav-link w-nav-link w--current">Shop</a>
+          <a href="./shop" aria-current="page" class="nav-link w-nav-link w--current">Shop</a>
           <a href="./production" class="nav-link w-nav-link">Production</a>
         </nav>
         <div id="w-node-_649394a2-8411-ead7-0575-63509ac15fc1-9ac15fb5" class="menu-button w-nav-button">
           <div class="w-icon-nav-menu"></div>
         </div>
         <div id="w-node-_649394a2-8411-ead7-0575-63509ac15fc3-9ac15fb5" class="link-wrap-right">
-          <a href="#" class="w-inline-block"><img src="images/search.png" loading="lazy" alt="" class="nav-icon"></a>
-          <a href="#" class="w-inline-block"><img src="images/account.png" loading="lazy" alt="" class="nav-icon"></a>
-          <a href="#" class="w-inline-block"><img src="images/shop.png" loading="lazy" alt="" class="nav-icon"></a>
+          <a href="/shop#!/~/search" class="w-inline-block"><img src="images/search.svg" loading="lazy" alt="" class="nav-icon"></a>
+          <a href="/shop#!/~/account/returnUrl=/account" class="w-inline-block"><img src="images/account.svg" loading="lazy" alt="" class="nav-icon"></a>
+          <a href="#" class="nav-link-cart w-inline-block"><img src="images/cart.svg" loading="lazy" alt="" class="nav-icon">
+            <div class="embed-cart w-embed w-script">
+              <div class="ec-cart-widget"></div>
+              <div>
+                <script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?80605001&data_platform=code&data_date=2022-11-13" charset="utf-8"></script>
+                <script type="text/javascript">Ecwid.init();</script>
+              </div>
+            </div>
+          </a>
         </div>
       </div>
     </div>
