--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div data-animation="default" data-collapse="small" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
     <div class="container w-container">
       <div class="container-inner">
-        <a href="./index" id="w-node-_649394a2-8411-ead7-0575-63509ac15fb8-9ac15fb5" aria-current="page" class="brand w-nav-brand w--current"><img src="images/minugahana-logo.png" loading="lazy" alt="" class="image-logo"></a>
+        <a href="./" id="w-node-_649394a2-8411-ead7-0575-63509ac15fb8-9ac15fb5" aria-current="page" class="brand w-nav-brand w--current"><img src="images/minugahana-logo.png" loading="lazy" alt="" class="image-logo"></a>
         <nav role="navigation" id="w-node-_649394a2-8411-ead7-0575-63509ac15fba-9ac15fb5" class="nav-menu w-nav-menu">
           <a href="./about" class="nav-link w-nav-link">About</a>
           <a href="./shop" class="nav-link w-nav-link">Shop</a>
