--- a/size-guide.html
+++ b/size-guide.html
@@ -270,7 +270,7 @@
     <div class="container w-container">
       <div class="footer-wrap">
         <a href="./shipping-and-returns" class="footer-link">Shipping &amp; Returns</a>
-        <a href="./contact.html" class="footer-link">Contact</a>
+        <a href="./contact" class="footer-link">Contact</a>
         <a href="./size-guide" aria-current="page" class="footer-link w--current">Size guide</a>
         <a href="./care" class="footer-link">Care</a>
         <a href="https://www.instagram.com/minugahan_a/" target="_blank" class="footer-link-icon w-inline-block"><img src="images/instagram-minu.svg" loading="lazy" alt="" class="footer-icon"></a>
