--- a/thank-you.html
+++ b/thank-you.html
@@ -15,18 +15,18 @@
   <script type="text/javascript">WebFont.load({  google: {    families: ["Chivo:300,regular,700,900"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
-  <link href="images/webclip.png" rel="apple-touch-icon">
+  <link href="images/minu-favicon.svg" rel="shortcut icon" type="image/x-icon">
+  <link href="images/minu-webclip.svg" rel="apple-touch-icon">
 </head>
 <body>
   <div data-animation="default" data-collapse="small" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
     <div class="container w-container">
       <div class="container-inner">
-        <a href="index.html" id="w-node-_649394a2-8411-ead7-0575-63509ac15fb8-9ac15fb5" class="brand w-nav-brand"><img src="images/minugahana-logo.png" loading="lazy" alt="" class="image-logo"></a>
+        <a href="./" id="w-node-_649394a2-8411-ead7-0575-63509ac15fb8-9ac15fb5" class="brand w-nav-brand"><img src="images/minugahana-logo.png" loading="lazy" alt="" class="image-logo"></a>
         <nav role="navigation" id="w-node-_649394a2-8411-ead7-0575-63509ac15fba-9ac15fb5" class="nav-menu w-nav-menu">
-          <a href="about.html" class="nav-link w-nav-link">About</a>
-          <a href="shop.html" class="nav-link w-nav-link">Shop</a>
-          <a href="production.html" class="nav-link w-nav-link">Production</a>
+          <a href="./about" class="nav-link w-nav-link">About</a>
+          <a href="./shop" class="nav-link w-nav-link">Shop</a>
+          <a href="./production" class="nav-link w-nav-link">Production</a>
         </nav>
         <div id="w-node-_649394a2-8411-ead7-0575-63509ac15fc1-9ac15fb5" class="menu-button w-nav-button">
           <div class="w-icon-nav-menu"></div>
@@ -53,18 +53,18 @@
         <div class="margin-bottom-50px">
           <h1>Thank you for your submission!</h1>
         </div>
-        <a href="index.html" class="button-standard w-button">Continue to Home</a>
+        <a href="./" class="button-standard w-button">Continue to Home</a>
       </div>
     </div>
   </div>
   <div class="section-footer wf-section">
     <div class="container w-container">
       <div class="footer-wrap">
-        <a href="shipping-and-returns.html" class="footer-link">Shipping &amp; Returns</a>
-        <a href="contact.html" class="footer-link">Contact</a>
-        <a href="size-guide.html" class="footer-link">Size guide</a>
-        <a href="care.html" class="footer-link">Care</a>
-        <a href="https://www.instagram.com/minugahan_a/" class="footer-link-icon w-inline-block"><img src="images/instagram-minu.svg" loading="lazy" alt="" class="footer-icon"></a>
+        <a href="./shipping-and-returns" class="footer-link">Shipping &amp; Returns</a>
+        <a href="./contact" class="footer-link">Contact</a>
+        <a href="./size-guide" class="footer-link">Size guide</a>
+        <a href="./care" class="footer-link">Care</a>
+        <a href="https://www.instagram.com/minugahan_a/" target="_blank" class="footer-link-icon w-inline-block"><img src="images/instagram-minu.svg" loading="lazy" alt="" class="footer-icon"></a>
       </div>
     </div>
   </div>
@@ -83,29 +83,9 @@
       }, 100);
     }
   });
-  /*
-  Ecwid.OnPageLoaded.add(function(page){
-    console.log(page);
-    if(Ecwid.getVisitorLocation().countryCode === 'MY' && page.type === 'PRODUCT'){
-      console.log('Malaysian',$('input[name="Country"]').length)
-      var checkExist = setInterval(function() {
-        if ($('#loadingDiv').is(':hidden')) {
-          console.log("loading completed!");
-          clearInterval(checkExist);
-          $('input[name="Country"]').click()	
-        }
-      }, 100);
-    }
-  });
-*/
   Ecwid.OnProductOptionsChanged.add(function() {
     beforeDiscount = parseFloat($($('.details-product-price__value')[0]).text().replace('RM', ''))	
     discount = parseFloat($('.option-surcharge__value').text().replace('-RM', ''))
-    /*
-    if(Ecwid.getVisitorLocation().countryCode === 'MY'){
-      $('.product-details__product-price').append(`<div class="product-details__product-price ec-price-item" style="margin-bottom:0px"><s class="ec-price-item" style="font-size: 15px;">AU$${beforeDiscount.toFixed(2)}</s><span> (Malaysian Price)</span></div>`)    
-    }
-    */
   });
   Ecwid.OnPageLoaded.add(function(page){
     console.log(page);
