--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <h2 class="h2">Newsletter</h2>
         </div>
         <div class="subsribe-form-block w-form">
-          <form id="email-form" name="subscribe-form" data-name="Subscribe Form" action="https://formsubmit.co/minugahanna@gmail.com" method="POST class="subscribe-form">
+          <form id="email-form" name="subscribe-form" data-name="Subscribe Form" action="https://formsubmit.co/minugahanna@gmail.com" method="POST" class="subscribe-form">
             <input type="email" class="text-field w-input" maxlength="256" name="email" data-name="Email" placeholder="Email address" id="email" required="">
             <input type="submit" value="Subscribe" data-wait="Please wait..." class="subscribe-button w-button">
             <input type="hidden" name="_next" value="https://www.minugahanna.co/thank-you.html">
